--- a/text-decorations.css
+++ b/text-decorations.css
@@ -1,3 +1,25 @@
 .decoration {    
     /* ここにCSSを書いていきます */
+    font-size: 48px;
+    color: red;
+    /* 以下はカラーコードで色を指定しています */
+    color: #ff0000;
+    /* 以下はRGBで色を指定しています */
+    color: rgb(255, 0, 0);
+    font-weight: bold;
+    font-family:"游ゴシック体", "YuGothic", "游ゴシック", "Yu Gothic";
+    font-style: italic;
+    line-height: 4.5;
+    letter-spacing: 1.5em;
+    text-decoration: underline;
+    text-decoration: line-through;
+    border: solid 3px red;
+    background-color: red;
+    text-shadow: 1px 1px 2px gray;
+    text-align: center;
+    .text-bold {
+        font-weight: bold;
+    }
+
+    
 }
