--- a/display-inline.css
+++ b/display-inline.css
@@ -2,14 +2,14 @@ p {
     background-color: yellow;
 }
 #first-span {
-    margin: 20px;
+   padding: 20px;
     background-color: lightblue;
 }
 #second-span {
-    margin: 30px;
+padding: 30px;
     background-color: lightgreen;
 }
 #third-span {
-    margin: 40px;
+    padding: 40px;
     background-color: lightgray;
 }
