--- a/position-relative.css
+++ b/position-relative.css
@@ -1,3 +1,8 @@
+.parent {
+    position: relative;
+    height: 400px;
+    background-color: lightcyan;
+}
 #first-div {
    width: 100px;
    height: 100px;
@@ -9,9 +14,9 @@
    background-color: yellow;
 }
 #third-div {
-    position: relative;
+    position: absolute;
     top: 50px;
-    left: 50px;
+    right: 50px;
    width: 100px;
    height: 100px;
    background-color: pink;
