--- a/position-relative.css
+++ b/position-relative.css
@@ -3,6 +3,9 @@
     background-color: lightcyan;
 }
 .child {
+    position: fixed;
+    bottom: 0;
+    left: 100px;
     width: 100px;
     height: 100px;
     background-color: orange;
